--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dotenv-expand": "4.2.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "0.11.2",
-    "firebase": "^5.4.1",
+    "firebase": "5.4.1",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
     "fs-extra": "3.0.1",
     "gh-pages": "^1.2.0",
